# njinga-identities

./: pyproject.toml  requirements.txt
njinga_identities/: __init__.py  identities.py  models.py
