[tool.poetry]
name = "njinga-identities"
version = "0.1.0"
description = ""
authors = ["eniocsj <eniocsjunior@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
SQLAlchemy = "^1.3.23"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
